# peTTY

./: .gitignore  CLAUDE.md  LICENSE.md  README.md  main.py  pyproject.toml  test_database.py  test_mastodon_client.py
docs/plans/: 2026-01-14-ui-cleanup-design.md  2026-01-14-ui-cleanup-implementation.md
src/petty/: __init__.py  __main__.py  app.py  config.py  database.py  mastodon_client.py  oauth.py
