[project]
name = "peTTY"
version = "0.1.0"
description = "A TUI-based follow/unfollow tracker."
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "textual>=0.47.0",
    "Mastodon.py>=1.8.0",
    "tomli-w>=1.0.0",
]

[project.scripts]
petty = "petty.__main__:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/petty"]
